--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
-#comment
-theme: jekyll-theme-modernist
+remote_theme: pages-themes/modernist@v0.2.0
+plugins:
+- jekyll-remote-theme
+title: About Reona Choudhury
+description: [A short description of your site's purpose]
